--- a/markup/src/useradd.html
+++ b/markup/src/useradd.html
@@ -22,6 +22,9 @@
 	  <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="reports">
 	    <path  fill-rule="evenodd" d="M12 3L1 22h22M12 7l7.53 13H4.47M11 11v4h2v-4m-2 6v2h2v-2"></path>
 	  </symbol>
+	  <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21 20" id="services">
+	    <path d="M11 2v16a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2zM2 8v4h7V8H2zm0 6v4h7v-4H2zM2 2v4h7V2H2zm11 7h3V6h2v3h3v2h-3v3h-2v-3h-3V9z"></path>
+	  </symbol>	  
 	  <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18" id="logout">
 	    <path  d="M11.08 12.59L13.67 10H4V8h9.67l-2.59-2.59L12.5 4l5 5-5 5-1.42-1.41zM16 0a2 2 0 0 1 2 2v4.67l-2-2V2H2v14h14v-2.67l2-2V16a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2C0 .89.89 0 2 0h14z"></path>
 	  </symbol>	
@@ -137,6 +140,13 @@
 					</svg>
 				</a>
 				<span>!</span>
+			</li>
+			<li>
+				<a class="btns" href="services.html" title="Services">
+					<svg class="icons icons48x48">
+					  <use xlink:href="#services"></use>
+					</svg>
+				</a>
 			</li>
 			<li class="separator">
 			</li>
